--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -19,7 +19,7 @@
                     <li><a href="#tt">Plan zajęć</a></li>
                     <li class="dropdown">
                           <a class="dropdown-toggle" data-toggle="dropdown" role="button"
-                             aria-haspopup="true" aria-expanded="false">Szkoła<span class="caret"></span></a>
+                             aria-haspopup="true" aria-expanded="false">Uczelnia<span class="caret"></span></a>
                           <ul class="dropdown-menu">
                               <li><a href="#courses">Przedmioty</a></li>
                               <li><a href="#grades">Oceny</a></li>
