--- a/web/static/css/main.css
+++ b/web/static/css/main.css
@@ -1,4 +1,8 @@
 body {
-  min-height: 700px;
-  padding-top: 70px;
+    min-height: 700px;
+    padding-top: 70px;
+}
+
+lecturer_photo {
+   height="150";
 }
