--- a/web/static/templates/lecturer_details.html
+++ b/web/static/templates/lecturer_details.html
@@ -1,7 +1,7 @@
 <table>
     <tbody>
     <tr>
-        <td width="85%">
+        <td >
             <table class="table table-strip table-responsive">
             <tr><td>Tytuł</td><td>{{titles.before}}{{DEPLOY_URL}}</td>
                 <td></td>
@@ -20,8 +20,8 @@
             <tr><td></td><td>{{course_name.pl}} {{term_id}} {{lecturers.user_id}} {{lecturers.id}} {{course_id}}</td></tr>
             {{/course_editions_conducted}}
             </table>
-        <td width="15%" valign="top" align="center">
-            {{#if has_photo}}<img src="{{DEPLOY_URL}}/api/users_info_photos/{{has_photo}}" height="150">{{/if}}
+        <td>
+            {{#if has_photo}}<img src="{{API_URL}}/api/users_info_photos/{{has_photo}}" class="lecturer_photo">{{/if}}
         </td>
     </tr>
     </tbody>
