use class="img-thumbnail"

--- a/web/static/templates/lecturer_details.html
+++ b/web/static/templates/lecturer_details.html
@@ -22,7 +22,7 @@
             </table>
         <td>
         {{#if has_photo}}
-        <div class="lecturer_photo">
+        <div class="img-thumbnail">
             <img src="{{API_URL}}/api/users_info_photos/{{has_photo}}" >
         </div>
         </td>
