href open in new page

--- a/web/static/templates/lecturer_details.html
+++ b/web/static/templates/lecturer_details.html
@@ -9,7 +9,7 @@
             <tr><td>Status pracownika</td><td>{{staff_status}}</td></tr>
             <tr><td>Godziny przyjęć</td><td>{{office_hours.pl}}</td></tr>
             <tr><td>Pokój</td><td>{{room.building_id}} - {{room.building_name.pl}}</td></tr>
-            <tr><td>Strona domowa</td><td><a href="{{homepage_url}}">{{homepage_url}}</a></td></tr>
+            <tr><td>Strona domowa</td><td><a href="{{homepage_url}}" target="_blank">{{homepage_url}}</a></td></tr>
             <tr><td>Zainteresowania</td><td>{{interests.pl}}</td></tr>
             <tr><td>Zatrudnienie</td><td></td></tr>
             {{#employment_positions}}
