--- a/web/static/templates/home.html
+++ b/web/static/templates/home.html
@@ -1,7 +1,61 @@
-<h1>HOME</h1>
+<div class="site-wrapper">
 
-<div class="panel panel-default">
-  <div class="panel-body">
-    Hello page after login, {{hello}}!
-  </div>
+    <div class="site-wrapper-inner">
+
+      <div class="cover-container">
+
+        <div class="inner cover">
+          <h1 class="cover-heading">Kujon - uniwersytecka wymiana wiedzy</h1>
+          <p class="lead">Kujon to system pozwalający na przeglądanie danych na smartphonie, integrację z USOS oraz wymianę kontaktów i danych studenckich. Dzięki integracji z 23 polskimi uczelaniami, teraz masz narzędzie pozwalające na korzystanie ze swoich danych uniwersyteckich na smartfonie.</p>
+          <p class="lead">Obsługujemy 23 największe polskie uczelnie..
+            <a href="#" class="btn btn-lg btn-default">Zobacz listę</a>
+          </p>
+        </div>
+
+        <div class="container">
+          <div class="row">
+
+            <div class="inner cover ">
+              <h1 class="cover-heading">Pobierz wersję mobilną</h1>
+              <p class="lead">Kujona możesz mieć na dowolnym spartfonie i w przeglądarce.. wybierz wersję która Cię interesuje..</p>
+            </div>
+
+
+            <div class="col-md-4">
+                <a class="link-name" href="https://itunes.apple.com/pl/app/io.kujon"  >
+                    <div class="text-box" role="group">
+                        <div class="text" role="textbox" >
+                          <p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-google-play.png" alt="" /></a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+            <div class="col-md-4">
+                <a class="link-name" href="https://play.google.com/store/apps/details?id=io.kujon"  >
+                    <div class="text-box" role="group">
+                        <div class="text" role="textbox" >
+                          <p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-app-store.png" alt="" /></a>
+                        </div>
+                    </div>
+                </a>
+                </div>
+            <div class="col-md-4">
+                <a class="link-name" href="http://apps.microsoft.com/windows/pl-pl/app/kujon-io"  >
+                    <div class="text-box" role="group">
+                        <div class="text" role="textbox" >
+                          <p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-windows-phone-store.png" alt="" /></a>
+                        </div>
+                    </div>
+                </a>
+            </div>
+          </div>
+        </div>
+        <div class="mastfoot">
+          <div class="inner">
+            <br>
+            <p>(c) kujon.io 2016</p>
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
