unicode logging for crawler fix

--- a/web/static/templates/grades.html
+++ b/web/static/templates/grades.html
@@ -18,7 +18,7 @@
             <tr>
                 <td>{{term_id}}</td>
                 <td>{{course_id}}</td>
-                <td>{{course_name}}</td>
+                <td><a href="#courses">{{course_name}}</a></td>
                 {{#grades}}
                 {{#if @first}}
                     <td>{{exam_session_number}}</td>
