--- a/web/static/templates/lecturer_details.html
+++ b/web/static/templates/lecturer_details.html
@@ -17,7 +17,7 @@
             {{/employment_positions}}
             <tr><td>Prowadzone przedmioty</td></tr>
             {{#course_editions_conducted}}
-            <tr><td></td><td>{{course_name.pl}} {{term_id}} {{lecturers.user_id}} {{lecturers.id}} {{course_id}}</td></tr>
+            <tr><td></td><td><a href="#courses">{{course_name.pl}}</a> {{term_id}} {{lecturers.user_id}} {{lecturers.id}} {{course_id}}</td></tr>
             {{/course_editions_conducted}}
             </table>
         <td>
