--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -16,7 +16,7 @@
                 {{#if USER_LOGGED}}
                     {{#if USOS_PAIRED}}
                     <li><a href="#user">Użytkownik</a></li>
-                    <li><a href="#tt">Plan zajęć</a></li>
+                    <li><a href="#time_table">Plan zajęć</a></li>
                     <li class="dropdown">
                           <a class="dropdown-toggle" data-toggle="dropdown" role="button"
                              aria-haspopup="true" aria-expanded="false">Uczelnia<span class="caret"></span></a>
