--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -1,10 +1,50 @@
 <table class="table table-hover table-responsive">
 <tbody>
-  <tr><td>Język</td><td>{{lang_id}}</td></tr>
   <tr><td>Jednostka</td><td>{{fac_id.name}}, {{fac_id.postal_address}}, tel.: {{fac_id.phone_numbers}}</td></tr>
+  {{#if lang_id}}
+  <tr><td>Język prowadzenia</td><td>{{lang_id}}</td></tr>
+  {{/if}}
   <tr><td>Czy jest prowadzony</td><td>{{is_currently_conducted}}</td></tr>
+  {{#if description}}
   <tr><td>Opis</td><td>{{nl2br description}}</td></tr>
+  {{/if}}
+  {{#if bibliography}}
   <tr><td>Bibliografia</td><td>{{nl2br bibliography}}</td></tr>
+  {{/if}}
+  {{#if assessment_criteria}}
   <tr><td>Kryteria oceny</td><td>{{nl2br assessment_criteria}}</td></tr>
+  {{/if}}
+
+  <tr><td>Zajęcia w cyklu</td><td>{{term.name}}</td></tr>
+  <tr><td>Okres</td><td>{{term.start_date}} - {{term.end_date}}</td></tr>
+
+  <tr><td>Prowadzący grup</td>
+    <td>
+    {{#lecturers}}
+      <a href="#lecturers">{{first_name}} {{last_name}}</a><br>
+    {{/lecturers}}
+    </td>
+  </tr>
+  {{#if coordinators}}
+  <tr><td>Koordynatorzy</td>
+    <td>
+    {{#coordinators}}
+      <a href="#lecturers">{{first_name}} {{last_name}}</a><br>
+    {{/coordinators}}
+    </td>
+  </tr>
+  {{/if}}
+  {{#groups}}
+  <tr><td>Typ zajęć</td><td>{{class_type}}, numer grupy: {{group_number}} </td></tr>
+  {{/groups}}
+  <tr><td>Studenci</td>
+    <td>
+    {{#participants}}
+      <a href="#user/{{user_id}}">{{last_name}} {{first_name}}</a><br>
+    {{/participants}}
+    </td>
+  </tr>
+
+
 </tbody>
 </table>
