--- a/web/static/templates/courses.html
+++ b/web/static/templates/courses.html
@@ -13,7 +13,7 @@
             </div>
             {{#data}}
             <div class="panel panel-table">
-                <div class="panel-heading" role="tab" id="heading{{course_id}}" course-id="{{course_id}}">
+                <div class="panel-heading" role="tab" id="heading{{course_id}}" course-id="{{course_id}}" term-id="{{term_id}}">
                     <div class="row">
                         <div class="col-md-6">
                             <a role="button" data-toggle="collapse" data-parent="#accordionCourses" href="#collapse{{course_id}}" aria-expanded="false" aria-controls="collapse{{course_id}}">
