--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -21,7 +21,7 @@
   <tr><td>Prowadzący grup</td>
     <td>
     {{#lecturers}}
-      <a href="#lecturers">{{first_name}} {{last_name}}</a><br>
+      <a href="#lecturers/{{user_id}}">{{first_name}} {{last_name}}</a><br>
     {{/lecturers}}
     </td>
   </tr>
