--- a/web/static/templates/terms.html
+++ b/web/static/templates/terms.html
@@ -1,10 +1,11 @@
 <div class="panel panel-default">
     <div class="panel-body">
         <table class="table table-hover table-responsive">
-            <caption>Semestry</caption>
+            <caption>Cykle akademickie</caption>
             <thead>
             <th>Nazwa</th>
             <th>Numer</th>
+            <th>Aktywny</th>
             <th>Data początkowa</th>
             <th>Data końcowa</th>
             <th>Data zakończenia</th>
@@ -15,6 +16,7 @@
             <tr>
                 <td>{{name.pl}}</td>
                 <td>{{term_id}}</td>
+                <td>{{#if active}}TAK{{else}}NIE{{/if}}</td>
                 <td>{{start_date}}</td>
                 <td>{{end_date}}</td>
                 <td>{{finish_date}}</td>
