--- a/web/static/templates/courses.html
+++ b/web/static/templates/courses.html
@@ -1,17 +1,17 @@
 <div class="panel panel-default">
     <div class="panel-body">
-        <caption>Przedmioty</caption>
+        <caption>Moje aktywne przedmioty</caption>
         <div class="panel-group" id="accordionCourses" role="tablist" aria-multiselectable="true">
             <div class="panel panel-table">
                 <div class="panel-heading">
                     <div class="row">
-                        <div class="col-md-6"><b>Nazwa kursu</b></div>
-                        <div class="col-md-2"><b>Nr kursu</b></div>
-                        <div class="col-md-2"><b>Semestr</b></div>
+                        <div class="col-md-6"><b>Nazwa</b></div>
+                        <div class="col-md-2"><b>Nr przedmiotu</b></div>
+                        <div class="col-md-2"><b>Cykl akademicki</b></div>
                     </div>
                 </div>
             </div>
-            {{#data}}
+            {{#data.active}}
             <div class="panel panel-table">
                 <div class="panel-heading" role="tab" id="heading{{course_id}}" course-id="{{course_id}}" term-id="{{term_id}}">
                     <div class="row">
@@ -29,7 +29,39 @@
                     </div>
                 </div>
             </div>
-            {{/data}}
+            {{/data.active}}
+       </div>
+
+        <caption>Moje nieaktywne przedmioty</caption>
+        <div class="panel-group" id="accordionCourses" role="tablist" aria-multiselectable="true">
+            <div class="panel panel-table">
+                <div class="panel-heading">
+                    <div class="row">
+                        <div class="col-md-6"><b>Nazwa</b></div>
+                        <div class="col-md-2"><b>Nr przedmiotu</b></div>
+                        <div class="col-md-2"><b>Cykl akademicki</b></div>
+                    </div>
+                </div>
+            </div>
+            {{#data.inactive}}
+            <div class="panel panel-table">
+                <div class="panel-heading" role="tab" id="heading{{course_id}}" course-id="{{course_id}}" term-id="{{term_id}}">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <a role="button" data-toggle="collapse" data-parent="#accordionCourses" href="#collapse{{course_id}}" aria-expanded="false" aria-controls="collapse{{course_id}}">
+                                {{course_name}}
+                            </a>
+                        </div>
+                        <div class="col-md-2">{{course_id}}</div>
+                        <div class="col-md-2">{{term_id}}</div>
+                    </div>
+                </div>
+                <div id="collapse{{course_id}}" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading{{course_id}}">
+                    <div class="panel-body" id="courseDetails{{course_id}}">
+                    </div>
+                </div>
+            </div>
+            {{/data.inactive}}
         </div>
     </div>
 </div>
