--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -16,14 +16,14 @@
                 {{#if USER_LOGGED}}
                     {{#if USOS_PAIRED}}
                     <li><a href="#user">Użytkownik</a></li>
-                    <li><a href="#time_table">Plan zajęć</a></li>
+                    <li><a href="#tt">Plan zajęć</a></li>
                     <li class="dropdown">
                           <a class="dropdown-toggle" data-toggle="dropdown" role="button"
                              aria-haspopup="true" aria-expanded="false">Uczelnia<span class="caret"></span></a>
                           <ul class="dropdown-menu">
                               <li><a href="#courses">Przedmioty</a></li>
                               <li><a href="#grades">Oceny</a></li>
-                              <li><a href="#terms">Semestry</a></li>
+                              <li><a href="#terms">Cykle</a></li>
                               <li><a href="#programmes">Kierunki</a></li>
                               <li><a href="#lecturers">Nauczyciele</a></li>
                           </ul>
