--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -1,3 +1,40 @@
+<!-- Modal users-->
+<div class="modal fade" id="modalUsers" tabindex="-1" role="dialog" aria-labelledby="modalUsers">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Student</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal lecturers-->
+<div class="modal fade" id="modalLecturers" tabindex="-1" role="dialog" aria-labelledby="modalLecturers">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Nauczyciel</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <table class="table table-hover table-responsive">
 <tbody>
   <tr><td>Jednostka</td><td>{{fac_id.name}}, {{fac_id.postal_address}}, tel.: {{fac_id.phone_numbers}}</td></tr>
@@ -21,7 +58,7 @@
   <tr><td>Prowadzący grup</td>
     <td>
     {{#lecturers}}
-      <a href="#lecturers/{{user_id}}">{{first_name}} {{last_name}}</a><br>
+      <a onclick="$('#modalLecturers').modal('show')">{{first_name}} {{last_name}}</a><br>
     {{/lecturers}}
     </td>
   </tr>
@@ -29,7 +66,7 @@
   <tr><td>Koordynatorzy</td>
     <td>
     {{#coordinators}}
-      <a href="#lecturers">{{first_name}} {{last_name}}</a><br>
+      <a onclick="$('#modalLecturers').modal('show')">{{first_name}} {{last_name}}</a><br>
     {{/coordinators}}
     </td>
   </tr>
@@ -40,7 +77,7 @@
   <tr><td>Studenci</td>
     <td>
     {{#participants}}
-      <a href="#user/{{user_id}}">{{last_name}} {{first_name}}</a><br>
+      <a onclick="$('#modalUsers').modal('show')">{{last_name}} {{first_name}}</a><br>
     {{/participants}}
     </td>
   </tr>
