--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -1,40 +1,3 @@
-<!-- Modal users-->
-<div class="modal fade" id="modalUsers" tabindex="-1" role="dialog" aria-labelledby="modalUsers">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Student</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Modal lecturers-->
-<div class="modal fade" id="modalLecturers" tabindex="-1" role="dialog" aria-labelledby="modalLecturers">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Nauczyciel</h4>
-      </div>
-      <div class="modal-body">
-        ...
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
-      </div>
-    </div>
-  </div>
-</div>
-
 <table class="table table-hover table-responsive">
 <tbody>
   <tr><td>Jednostka</td><td>{{fac_id.name}}, {{fac_id.postal_address}}, tel.: {{fac_id.phone_numbers}}</td></tr>
@@ -77,7 +40,7 @@
   <tr><td>Studenci</td>
     <td>
     {{#participants}}
-      <a onclick="$('#modalUsers').modal('show')">{{last_name}} {{first_name}}</a><br>
+            <a class="linkModalUsers" user-id="{{user_id}}">{{last_name}} {{first_name}}</a><br>
     {{/participants}}
     </td>
   </tr>
