--- a/web/static/templates/courses.html
+++ b/web/static/templates/courses.html
@@ -1,3 +1,39 @@
+<!-- Modal users-->
+<div class="modal fade" id="modalUsers" tabindex="-1" role="dialog" aria-labelledby="modalUsers">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Student</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal lecturers-->
+<div class="modal fade" id="modalLecturers" tabindex="-1" role="dialog" aria-labelledby="modalLecturers">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Nauczyciel</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="panel panel-default">
     <div class="panel-body">
         <caption>Moje przedmioty</caption>
@@ -13,10 +49,10 @@
             </div>
             {{#data}}
             <div class="panel panel-table">
-                <div class="panel-heading" role="tab" id="heading{{course_id}}" course-id="{{course_id}}" term-id="{{term_id}}">
+                <div class="panel-heading" role="tab" id="heading{{course_id}}" >
                     <div class="row">
                         <div class="col-md-6">
-                            <a role="button" data-toggle="collapse" data-parent="#accordionCourses" href="#collapse{{course_id}}" aria-expanded="false" aria-controls="collapse{{course_id}}">
+                            <a class="panel-row" course-id="{{course_id}}" term-id="{{term_id}}" role="button" data-toggle="collapse" data-parent="#accordionCourses" href="#collapse{{course_id}}" aria-expanded="false" aria-controls="collapse{{course_id}}">
                                 {{course_name}}
                             </a>
                         </div>
