--- a/web/static/templates/lecturers.html
+++ b/web/static/templates/lecturers.html
@@ -1,3 +1,21 @@
+<!-- Modal courses-->
+<div class="modal fade" id="modalCourse" tabindex="-1" role="dialog" aria-labelledby="modalCourse">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="myModalLabel">Przedmiot</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
 <div class="panel panel-default">
     <div class="panel-body">
         <caption>Moi nauczyciele</caption>
@@ -11,10 +29,10 @@
             </div>
             {{#data}}
             <div class="panel panel-table">
-                <div class="panel-heading" role="tab" id="heading{{user_id}}" lecturer-id="{{user_id}}">
+                <div class="panel-heading" role="tab" id="heading{{user_id}}" ">
                     <div class="row">
                         <div class="col-md-6">
-                            <a role="button" data-toggle="collapse" data-parent="#accordionLecturers" href="#collapse{{user_id}}" aria-expanded="false" aria-controls="collapse{{user_id}}">
+                            <a class="panel-row" lecturer-id="{{user_id}}" role="button" data-toggle="collapse" data-parent="#accordionLecturers" href="#collapse{{user_id}}" aria-expanded="false" aria-controls="collapse{{user_id}}">
                             {{last_name}} {{first_name}}
                             </a>
                         </div>
