--- a/web/static/templates/courses.html
+++ b/web/static/templates/courses.html
@@ -1,35 +1,29 @@
 <!-- Modal users-->
-<div class="modal fade" id="modalUsers" tabindex="-1" role="dialog" aria-labelledby="modalUsers">
-  <div class="modal-dialog" role="document">
+<div class="modal fade bs-example-modal-lg" id="modalUsers" tabindex="-1" role="dialog" aria-labelledby="modalUsers">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Student</h4>
+        <h4 class="modal-title" id="myModalLabel"></h4>
       </div>
       <div class="modal-body">
-        ...
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
 </div>
 <!-- Modal lecturers-->
-<div class="modal fade" id="modalLecturers" tabindex="-1" role="dialog" aria-labelledby="modalLecturers">
-  <div class="modal-dialog" role="document">
+<div class="modal fade bs-example-modal-lg" id="modalLecturers" tabindex="-1" role="dialog" aria-labelledby="modalLecturers">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Nauczyciel</h4>
+        <h4 class="modal-title" id="myModalLabel"></h4>
       </div>
       <div class="modal-body">
-        ...
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
