--- a/web/static/templates/grades.html
+++ b/web/static/templates/grades.html
@@ -55,7 +55,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="exampleModalLabel">New message</h4>
+        <h4 class="modal-title" id="exampleModalLabel"></h4>
       </div>
       <div class="modal-body">
         <div id="lecturerDetails"></div>
