--- a/web/static/templates/course_details.html
+++ b/web/static/templates/course_details.html
@@ -76,7 +76,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="lecturerModalLabel">New message</h4>
+        <h4 class="modal-title" id="lecturerModalLabel"></h4>
       </div>
       <div class="modal-body">
       </div>
@@ -93,12 +93,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="userModalLabel">New message</h4>
+        <h4 class="modal-title" id="userModalLabel"></h4>
       </div>
       <div class="modal-body">
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Zamknij</button>
+          <button type="button" class="btn btn-default" data-dismiss="modal">Zamknij</button>
       </div>
     </div>
   </div>
