--- a/web/static/templates/user.html
+++ b/web/static/templates/user.html
@@ -32,6 +32,7 @@
                 {{#student_programmes}}
                     <tr><td>{{id}}</td><td>{{programme.description}} ({{programme.id}}) </td></tr>
                 {{/student_programmes}}
+                <tr><td>Numer konta</td><td>{{id}}</td></tr>
             </tbody>
         </table>
 
