--- a/web/static/templates/home.html
+++ b/web/static/templates/home.html
@@ -5,11 +5,37 @@
       <div class="cover-container">
 
         <div class="inner cover">
-          <h1 class="cover-heading">Kujon - uniwersytecka wymiana wiedzy</h1>
-          <p class="lead">Kujon to system pozwalający na przeglądanie danych na smartphonie, integrację z USOS oraz wymianę kontaktów i danych studenckich. Dzięki integracji z 23 polskimi uczelaniami, teraz masz narzędzie pozwalające na korzystanie ze swoich danych uniwersyteckich na smartfonie.</p>
-          <p class="lead">Obsługujemy 23 największe polskie uczelnie..
-            <a href="#" class="btn btn-lg btn-default">Zobacz listę</a>
-          </p>
+            <h1 class="cover-heading">Kujon - studencka wymiana wiedzy</h1>
+            <p class="lead">Kujon to system pozwalający na przeglądanie danych na smartphonie, integrację z USOS oraz wymianę kontaktów i danych studenckich. Integrujemy się z Facebookiem oraz z 21 największymi polskimi uczelniami..</p>
+            <table class="table">
+                <tr><td><img src="/static/img/logo/logo-pb-64x64.jpg" title="Politechnika Białostocka"></td>
+                    <td><img src="/static/img/logo/logo-pw-64x64.jpg" title="Politechnika Warszawska"></td>
+                    <td><img src="/static/img/logo/logo-pwsz-64x64.jpg" title="Państwowa Wyższa Szkoła Zawodowa w Elblągu"></td>
+                    <td><img src="/static/img/logo/logo-uam-64x64.jpg" title="Uniwersytet Adama Mickiewicza w Poznaniu"></td>
+                    <td><img src="/static/img/logo/logo-uj-64x64.jpg" title="Uniwersytet Jagieloński"></td>
+                    <td><img src="/static/img/logo/logo-uw-64x64.jpg" title="Uniwersytet Warszawski"></td>
+                    <td><img src="/static/img/logo/logo-wat-64x64.jpg" title="Wojskowa Akademia Techniczna"></td>
+                    <td><img src="/static/img/logo/logo-awfkat-64x64.jpg" title="Akademia Wychowania Fizycznego w Katowicach"></td>
+                </tr>
+                <tr><td><img src="/static/img/logo/logo-prz-64x64.jpg" title="Politechnika Rzeszowska"></td>
+                    <td><img src="/static/img/logo/logo-ps-64x64.jpg" title="Politechnika Świętokrzyska w Kielcach"></td>
+                    <td><img src="/static/img/logo/logo-ukw-64x64.jpg" title="Uniwersytet Kazimierza Wielkiego w Bydgoszczy"></td>
+                    <td><img src="/static/img/logo/logo-umk-64x64.jpg" title="Uniwersytet Mikołaja Kopernika w Toruniu"></td>
+                    <td><img src="/static/img/logo/logo-uwb-64x64.jpg" title="Uniwersytet w Białymstoku"></td>
+                    <td><img src="/static/img/logo/logo-ul-64x64.jpg" title="Uniwersytet Łódzki"></td>
+                    <td><img src="/static/img/logo/logo-uo-64x64.jpg" title="Uniwersytet Opolski"></td>
+                    <td><img src="/static/img/logo/logo-us-64x64.jpg" title="Uniwersytet Śląski w Katowicach"></td>
+                </tr>
+                <tr><td><img src="/static/img/logo/logo-ue-64x64.jpg" title="Uniwersytet Ekonomiczny we Wrocławiu"></td>
+                    <td><img src="/static/img/logo/logo-uniwroc-64x64.jpg" title="Uniwersytet Wrocławski"></td>
+                    <td><img src="/static/img/logo/logo-utp-64x64.jpg" title="Uniwersytet Technologiczno-Przyrodniczy w Bydgoszczy"></td>
+                    <td><img src="/static/img/logo/logo-uwm-64x64.jpg" title="Uniwersytet Warmińsko-Mazurski w Olsztynie"></td>
+                    <td><img src="/static/img/logo/logo-uth-64x64.jpg" title="Uczelnia Techniczno-Handlowa im. Heleny Chodkowskiej"></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            </table>
         </div>
 
         <div class="container">
@@ -39,15 +65,15 @@
                     </div>
                 </a>
                 </div>
-            <div class="col-md-4">
-                <a class="link-name" href="http://apps.microsoft.com/windows/pl-pl/app/kujon-io"  >
-                    <div class="text-box" role="group">
-                        <div class="text" role="textbox" >
-                          <p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-windows-phone-store.png" alt="" /></a>
-                        </div>
-                    </div>
-                </a>
-            </div>
+            <!--<div class="col-md-4">-->
+                <!--<a class="link-name" href="http://apps.microsoft.com/windows/pl-pl/app/kujon-io"  >-->
+                    <!--<div class="text-box" role="group">-->
+                        <!--<div class="text" role="textbox" >-->
+                          <!--<p><a href="https://play.google.com/store/apps/details?id=io.kujon" target="_blank"><img src="/static/img/pobierz-z-windows-phone-store.png" alt="" /></a>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</a>-->
+            <!--</div>-->
           </div>
         </div>
         <div class="mastfoot">
