login, logout images

--- a/web/static/templates/home.html
+++ b/web/static/templates/home.html
@@ -36,6 +36,7 @@
                     <td></td>
                 </tr>
             </table>
+                    <p class="lead">a jeżeli nie ma Twojej uczelni to zerknij tu..</p>
         </div>
 
         <div class="container">
