--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -35,14 +35,14 @@
             <ul class="nav navbar-nav navbar-right">
                 <li id="spinner"><a class="fa fa-spinner fa-pulse"></a></li>
                 {{#if USER_LOGGED }}
-                <li><a href="/authentication/logout">Wyloguj</a></li>
+                <li><a href="/authentication/logout"><img src="static/img/logout.png" width="24px"> Wyloguj</a></li>
                 {{else}}
                 <li class="dropdown" href="#login">
                     <a href="/authentication/login" class="dropdown-toggle" data-toggle="dropdown" role="button"
                        aria-haspopup="true" aria-expanded="false">Zaloguj <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="/authentication/google">Przez Google</a></li>
-                        <li><a href="/authentication/facebook">Przez Facebook</a></li>
+                        <li><a href="/authentication/google"><img src="static/img/google.png" width="24px"> Przez Google</a></li>
+                        <li><a href="/authentication/facebook"><img src="static/img/facebook.png" width="24px"> Przez Facebook</a></li>
                     </ul>
                 </li>
                 {{/if}}
