--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -39,7 +39,7 @@
                 {{else}}
                 <li class="dropdown" href="#login">
                     <a href="/authentication/login" class="dropdown-toggle" data-toggle="dropdown" role="button"
-                       aria-haspopup="true" aria-expanded="false">Zaloguj <span class="caret"></span></a>
+                       aria-haspopup="true" aria-expanded="false"><img src="static/img/login.png" width="24px"> Zaloguj <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="/authentication/google"><img src="static/img/google.png" width="24px"> Przez Google</a></li>
                         <li><a href="/authentication/facebook"><img src="static/img/facebook.png" width="24px"> Przez Facebook</a></li>
