--- a/web/static/templates/course_details_modal.html
+++ b/web/static/templates/course_details_modal.html
@@ -36,7 +36,7 @@
   <tr><td>Prowadzący grup</td>
     <td>
     {{#lecturers}}
-        {{first_name}} {{last_name}}
+        {{first_name}} {{last_name}},
     {{/lecturers}}
     </td>
   </tr>
@@ -44,7 +44,7 @@
   <tr><td>Koordynatorzy</td>
     <td>
     {{#coordinators}}
-        {{first_name}} {{last_name}}
+        {{first_name}} {{last_name}},
     {{/coordinators}}
     </td>
   </tr>
@@ -55,7 +55,7 @@
   <tr><td>Studenci</td>
     <td>
     {{#participants}}
-        {{last_name}} {{first_name}}
+        {{last_name}} {{first_name}},
     {{/participants}}
     </td>
   </tr>
