--- a/web/static/templates/navigation.html
+++ b/web/static/templates/navigation.html
@@ -16,16 +16,17 @@
                 {{#if USER_LOGGED}}
                     {{#if USOS_PAIRED}}
                     <li><a href="#user">Użytkownik</a></li>
-                    <li><a href="#tt">Plan zajęć</a></li>
+                    <li><a href="#tt">Plan</a></li>
                     <li><a href="#courses">Przedmioty</a></li>
                     <li><a href="#grades">Oceny</a></li>
+                    <li><a href="#lecturers">Nauczyciele</a></li>
+
                     <li class="dropdown">
                           <a class="dropdown-toggle" data-toggle="dropdown" role="button"
                              aria-haspopup="true" aria-expanded="false">Uczelnia<span class="caret"></span></a>
                           <ul class="dropdown-menu">
                               <li><a href="#terms">Cykle</a></li>
                               <li><a href="#programmes">Kierunki</a></li>
-                              <li><a href="#lecturers">Nauczyciele</a></li>
                           </ul>
                     </li>
                     {{/if}}
@@ -47,6 +48,6 @@
                 </li>
                 {{/if}}
             </ul>
-        </div><!--/.nav-collapse -->
+        </div>
     </div>
 </nav>
