--- a/web/static/templates/programmes.html
+++ b/web/static/templates/programmes.html
@@ -1,7 +1,9 @@
 <div class="panel panel-default">
+    <div class="panel-heading">
+        <h4>Kierunki</h4>
+    </div>
     <div class="panel-body">
         <table class="table table-hover table-responsive">
-            <caption>Kierunki nauczania</caption>
             <thead>
             <th>Nazwa</th>
             <th>Numer</th>
