--- a/web/static/templates/terms.html
+++ b/web/static/templates/terms.html
@@ -1,7 +1,9 @@
 <div class="panel panel-default">
+    <div class="panel-heading">
+        <h4>Cykle akademickie</h4>
+    </div>
     <div class="panel-body">
         <table class="table table-hover table-responsive">
-            <caption>Cykle akademickie</caption>
             <thead>
             <th>Nazwa</th>
             <th>Numer</th>
