--- a/web/static/templates/lecturers.html
+++ b/web/static/templates/lecturers.html
@@ -1,17 +1,14 @@
 <!-- Modal courses-->
-<div class="modal fade" id="modalCourse" tabindex="-1" role="dialog" aria-labelledby="modalCourse">
+<div class="modal fade" id="courseModal" tabindex="-1" role="dialog" aria-labelledby="courseModal">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel">Przedmiot</h4>
+        <h4 class="modal-title" id="myModalLabel"></h4>
       </div>
       <div class="modal-body">
-        ...
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
